feat(openshift): Introduce /services/openshift/user
Returns the user name logged in OpenShift, like:

{
    "name": "app-launcher"
}

Fixes #696
