# services/openshift-service-api/src/main/java/io/fabric8/launcher/service/openshift/api/OpenShiftUser.java
@@ -1,0 +1,14 @@
+package io.fabric8.launcher.service.openshift.api;
+
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import org.immutables.value.Value;
+
+@Value.Immutable
+@JsonSerialize(as = ImmutableOpenShiftUser.class)
+@JsonDeserialize(as = ImmutableOpenShiftUser.class)
+public interface OpenShiftUser {
+
+    @Value.Parameter
+    String getName();
+}
